syntax = "proto3";

package proto;

message DataMeta {
    int32 version = 1;
    bytes id = 2;
    string namespace = 3;
    string table = 4;
    bytes key = 5;
}

message DataContent {
    bool deleted = 1;
    bytes content = 2;
}

message DataBody {
    bytes id = 1;
    int32 ring = 2;
    string namespace = 3;
    string table = 4;
    int32 partition = 5;
    int32 version = 6;
    bytes content = 7;
}

message PushRequest {
    repeated DataBody data = 1;
}

message PushResponse {
    bool success = 1;
}

message PullRequest {
    repeated DataBody data = 1;
}

message PullResponse {
    repeated DataBody data = 1;
}

message PushPullRequest {

}

message PushPullResponse {

}

message DataMigrateRequest {
    int32 startRing = 1;
    int32 endRing = 2;
}

message DataMigrateResponse {
    bool completed = 1;
}