syntax = "proto3";

package proto;

//enum PacketCategory {
//    System = 0;
//    Data = 2;
//}

enum PacketType {
    SystemHi = 0;
    DataPush = 1001;
    DataPushReply = 1002;
    DataPull = 1003;
    DataPullReply = 1004;
    DataMigrate = 1005;
    DataMigrateReply = 1006;
}

message Packet {
    int32 version = 1;
    string id = 2;
    PacketType type = 3;
    int32 from = 4;
    int32 to = 5;
    bytes content = 6;
}